# streamlitapp_in_container

./: Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
